[package]
name = "rdb"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/muhammad-fiaz/RDB"
license = "Apache-2.0"
description = "A high-performance, Rust-powered relational database system featuring a JSON API query language, B+ Tree indexing, and role-based access control."

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.9"
directories = "6"
parking_lot = "0.12"
rayon = "1.11"
argon2 = "0.5"
rand = "0.9.2"
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.5"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
crossterm = "0.29"
hex = "0.4"
tempfile = "3"
sha2 = "0.10"
crc32fast = "1.5"
rand_core = "0.9.3"
logly = "0.0.4"
zstd = "0.13"
lru = "0.16.3"
